ISSUE150-group-join-approve (#167)
* ISSUE150-group-join-approve

* update test code

* update swagger
